--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -72,6 +72,7 @@ padding: 0;
 text-align: center;
 color: black;
 font-weight: bold;
+overflow: auto;
 }
 
 section{
@@ -80,7 +81,8 @@ section{
     height: 50px;
     text-align: center;
     padding-top:10px;
-    padding-left: 47% ;
+   justify-content: center;
+   align-items: center;
     font-size: 1.5em;
     padding-bottom: 10px;
    
